--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<h1>Hi, my name is Valentina<br>
-I am a Software Developer</h1><br>
-<h2>and I´d love to show you my projects..</h2>
+<img src="src/assets/img/1.jpg">
