--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<img src="src/assets/img/1.jpg">
+<div class="slideshow-container">
+    <img *ngIf="showImage" class="img-slideshow" src="assets/img/{{ images[currentImage] }}">
+</div>
