--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,34 @@
         transform: scale(1.1);
     }
 }
+
+.slideshow-overlay {
+    background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+
+    p {
+        margin-left: 120px;
+        max-width: 800px;
+        color: white;
+        font-size: xx-large;
+        border-left: 4px solid rgb(253, 99, 99);
+    }
+}
+
+.fadeIn {
+    animation: fadeInAnimation 1s ease-in-out;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
