--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-menu></app-menu>
-<app-slideshow></app-slideshow>
+<app-menu [lightMode]="router.url !== '/'"></app-menu>
+
+<div [class.container]="router.url !== '/'">
+    <router-outler></router-outler>
+</div>
