--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,17 @@
-<header>
-    <img src="assets/img/vk.png" alt="">
+<header [class.headerLight]="lightMode">
 
-    <div>
-        <a href="#">Home</a>
+
+
+
+
+
+    <img *ngIf="!lightMode" routerLink="/" src="assets/img/vk.png" alt="">
+    <img *ngIf="lightMode" routerLink="/" src="assets/img/vk_white.png" alt="">
+
+    <div [class.lightLinks]="lightMode">
+        <a routerLink="/">Home</a>
         <a href="#">Curriculum</a>
-        <a href="#">My Projects</a>
-        <a href="#">Impressum</a>
+        <a href="#">Projects</a>
+        <a routerLink="/imprint">Imprint</a>
     </div>
 </header>
