--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -2,6 +2,7 @@ header {
     position: absolute;
     left: 0;
     right: 0;
+    top: 0;
     height: 50px;
     z-index: 1;
     display: flex;
@@ -10,17 +11,35 @@ header {
     padding-left: 100px;
     padding-right: 100px;
 
+
     a {
         text-decoration: none;
-        color: white;
+        color: black;
         margin-left: 20px;
 
         &:hover {
-            color: rgba(255,255,255,0.7)
+            color: black(0,0,0,0.7)
         }
     }
 
     img {
         height: 30px;
+        cursor: pointer;
     }
+}
+
+.lightLinks {
+    a {
+        color: white;
+
+        &:hover {
+            color: white(255,255,255,0.7)
+
+        }
+    }
+}
+
+.headerLight {
+    background-color: black;
+    box-shadow: 0 1px 3px 0 rgba(255,255,255,0.2);
 }
