--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,8 +10,9 @@
 
     <div [class.lightLinks]="lightMode">
         <a routerLink="/">Home</a>
-        <a href="#">Curriculum</a>
-        <a href="#">Projects</a>
+        <a routerLink="/data-protection">Data Protection</a>
+        <!-- <a href="#">Curriculum</a> -->
+        <!-- <a href="#">Projects</a> -->
         <a routerLink="/imprint">Imprint</a>
     </div>
 </header>
