--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-menu [lightMode]="router.url !== '/'"></app-menu>
 
 <div [class.container]="router.url !== '/'">
-    <router-outler></router-outler>
+    <router-outlet></router-outlet>
 </div>
