--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-menu [lightMode]="router.url !== '/'"></app-menu>
+<app-menu [darkMode]="router.url !== '/'"></app-menu>
 
 <div [class.container]="router.url !== '/'">
     <router-outlet></router-outlet>
 </div>
+
+<app-skills></app-skills>
+
+<app-footer></app-footer>
