--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -14,11 +14,11 @@ header {
 
     a {
         text-decoration: none;
-        color: black;
+        color: white;
         margin-left: 20px;
 
         &:hover {
-            color: black(0,0,0,0.7)
+            opacity: 0.85;
         }
     }
 
@@ -28,18 +28,15 @@ header {
     }
 }
 
-.lightLinks {
+.darkLinks {
     a {
-        color: white;
-
-        &:hover {
-            color: white(255,255,255,0.7)
+        color: black;
 
         }
     }
-}
 
-.headerLight {
-    background-color: black;
-    box-shadow: 0 1px 3px 0 rgba(255,255,255,0.2);
+
+.headerDark {
+    background-color: white;
+    box-shadow: 0 1px 3px 0 black(0,0,0,0.2);
 }
