--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,6 @@
-<h1 class="h1-center">My Skills</h1>
-<div class="wrap-skills">
-    
+<h1 class="center">My Skills</h1>
+
+<div class="center">
 
     <div>
         <img src="assets/img/java script.png" alt="">
@@ -17,6 +17,5 @@
     <div>        
         <img src="assets/img/Git-Icon.png" alt="">
     </div>
-
 
 </div>
