--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,14 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
