deleted favicon and getting error: cwd option must be a path to directory

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
-.container {
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-top: 100px;
-}
+// .container {
+//     // padding-left: 500px;
+//     // padding-right: 500px;
+//     padding-top: 100px;
+// }
+
 
