--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,25 @@
 <footer>
-    <div class="row">
-        <div>
-            <a routerLink="/data-protection">Data Protection</a>
-            <a routerLink="/imprint">Imprint</a>
-        </div>
 
-
-
-
-
-        <div>
-            <img src="assets/img/github-fill.png" alt="">
-            <img src="assets/img/linkedin-box-fill.png" alt="">
-        </div>
+    <div>
+        <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
+            <img href="/" src="assets/img/linkedin-box-fill.png">
+        </a>
+        <a _ngcontent-gqa-c30 target="_blank" href="https://github.com/ValentinaKuxhausen">
+            <img src="assets/img/github-fill.png">
+        </a>
+        <a _ngcontent-gqa-c30 target="_blank" href="https://www.xing.com/profile/Valentina_Kuxhausen/cv">
+            <img href="/" src="assets/img/xing-fill.png">
+        </a>
     </div>
+
+
+    <div>
+        <a routerLink="/data-protection">Data Protection</a>
+        <a routerLink="/imprint">Imprint</a>
+    </div>
+
+    <div>
+        <p>© Valentina Kuxhausen</p>
+    </div>
+
 </footer>
