--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,5 @@
 <header [class.headerDark]="darkMode">
 
-
-
-
-
-
     <!-- <img *ngIf="!darkMode" routerLink="/" src="white" alt="">
     <img *ngIf="darkMode" routerLink="/" src="black" alt=""> -->
 
@@ -12,5 +7,7 @@
         <a routerLink="/">Home</a>
         <a href="#">Skills</a>
         <a href="#">Projects</a>
+        <a href="#">Contact</a>
     </div>
+
 </header>
