--- a/src/app/slideshow/slideshow.component.html
+++ b/src/app/slideshow/slideshow.component.html
@@ -1,9 +1,18 @@
-<div class="slideshow-container">
+<!-- <div class="slideshow-container">
     <img *ngIf="showImage" class="img-slideshow" src="assets/img/{{ images[currentImage] }}">
 </div>
-
 <div class="slideshow-container slideshow-overlay">
     <p *ngIf="showImage" class="fadeIn">
         {{ headlines }}
     </p>
+</div> -->
+
+<div class="relativ slideshow-container bgr-dark">
+
+    <img class="profile-img" src="assets/img/kreis.png" alt="">
+
+    <div class="text-absolut">
+        <h1>Hi, I´m Valentina Kuxhausen<br>I´m a Front-End Developer</h1>
+    </div>
+
 </div>
