--- a/myhelpersVK.scss
+++ b/myhelpersVK.scss
@@ -2,10 +2,17 @@
     overflow: hidden;       //scrollbar hidden
 }
 
+.class-slideshow {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    max-width: 100%;
+    animation: zoomIn 8s ease;
+}
+
 .class {
     animation: zoomFunction 8s ease;
 }
-
 @keyframes zoomFunction {
     from {
         transform: scale(1);
@@ -27,9 +34,7 @@
 
 .class-fadeIn {
     animation: functionFadeInAnimation 1s ease-in-out;
-
 }
-
 @keyframes functionFadeInAnimation {
     from {
         opacity: 0;
@@ -40,3 +45,4 @@
         transform: translateY(0);
     }
 }
+
