--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <app-menu [darkMode]="router.url !== '/'"></app-menu>
 
-<div [class.container]="router.url !== '/'">
-    <router-outlet></router-outlet>
-</div>
+<!-- <div [class.container]="router.url !== '/'"> -->
 
-<app-skills></app-skills>
-<app-projects></app-projects>
+<router-outlet></router-outlet>
 
-<app-footer></app-footer>
+    <app-skills class="bgr-bright"></app-skills>
+    <app-projects class="bgr-dark"></app-projects>
+    <app-contact class="bgr-bright"></app-contact>
+
+<app-footer class="bgr-dark"></app-footer>
