--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,4 @@
+<div class="bgr-dark">
 <h1 class="center">My Projects</h1>
 
 <div class="column">
@@ -12,4 +13,5 @@
         <img class="project-img join" src="assets/img/4.jpg" alt="">
     </div>
 
+</div>
 </div>
