--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,8 @@
+.bgr-dark {
+    background-color: #112233;
+    color: white;
+}
+
 .project-img {
     width: 300px;
     height: 200px;
@@ -8,6 +13,8 @@
         opacity: 0.5;
     }
 }
+
+
 
 // .elpolloloco {
 
