--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,21 +1,24 @@
-<h1 class="center">My Skills</h1>
+<div class="bgr-bright">
+    <h1 class="center">My Skills</h1>
 
-<div class="center">
+    <div class="center">
 
-    <div>
-        <img src="assets/img/java script.png" alt="">
-    </div>
-    <div>
-        <img src="assets/img/rest-api-Icon.png" alt="">
-    </div>
-    <div>        
-        <img src="assets/img/html_css-Icon.png" alt="">
-    </div>
-    <div>        
-        <img src="assets/img/database-Icon.png" alt="">
-    </div>
-    <div>        
-        <img src="assets/img/Git-Icon.png" alt="">
-    </div>
+        <div>
+            <img src="assets/img/java script.png" alt="">
+        </div>
+        <div>
+            <img src="assets/img/rest-api-Icon.png" alt="">
+        </div>
+        <div>
+            <img src="assets/img/html_css-Icon.png" alt="">
+        </div>
+        <div>
+            <img src="assets/img/database-Icon.png" alt="">
+        </div>
+        <div>
+            <img src="assets/img/Git-Icon.png" alt="">
+        </div>
+
+    </div>  
 
 </div>
