--- a/src/app/slideshow/slideshow.component.scss
+++ b/src/app/slideshow/slideshow.component.scss
@@ -4,50 +4,28 @@
     overflow: hidden;
 }
 
-.img-slideshow {
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    max-width: 100%;
-    animation: zoomIn 8s ease;
+.bgr-dark {
+    background-color: #112233;
+    color: white;
 }
 
-@keyframes zoomIn {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(1.1);
-    }
+.profile-img {
+    width: 300px;
+    margin-top: 50px;
+}
+
+.text-absolut {
+    position: absolute;
+}
+
+.relative {
+    position: relative;
 }
 
 .slideshow-overlay {
-    background-color: rgba(0,0,0,0.3);
     position: absolute;
     top: 0;
     display: flex;
     align-items: center;
-
-    p {
-        margin-left: 150px;
-        max-width: 600px;
-        color: white;
-        font-size: xx-large;
-        border-left: 4px solid rgb(253, 99, 99);
-    }
-}
-
-.fadeIn {
-    animation: fadeInAnimation 1s ease-in-out;
-}
-
-@keyframes fadeInAnimation {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+    justify-content: center;
 }
