--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,9 +5,9 @@
 
     <div [class.darkLinks]="darkMode">
         <a routerLink="/">Home</a>
-        <a href="#">Skills</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
     </div>
 
 </header>
