--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,17 @@
-<h1 class="center">Contact Me</h1>
+<div id="contact" class="bgr-bright">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="center">CONTACT</h1>
+    <span class="center">Get in touch to work together?</span>
+    <div class="column">
 
-<div class="column">
+        <input class="input contact-fields" type="text" placeholder="Your name">
+        <input class="input contact-fields" type="text" placeholder="Your email">
+        <textarea class="textarea contact-fields" placeholder="Your message"></textarea>
+        <button class="button margin-bottom">Submit</button>
 
-    <input class="input contact-fields" type="text" placeholder="your name">
-    <input class="input contact-fields" type="text" placeholder="your email">
-    <textarea class="textarea contact-fields" placeholder="your message"></textarea>
-
+    </div>
 </div>
