--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,25 +1,31 @@
 <footer>
 
-    <div>
+
+    <!-- SOCIAL-WRAP -->
+    <div class="bgr-dark social-wrap">
         <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
-            <img href="/" src="assets/img/linkedin-box-fill.png">
+            <img src="assets/img/linkedin.png">
         </a>
         <a _ngcontent-gqa-c30 target="_blank" href="https://github.com/ValentinaKuxhausen">
-            <img src="assets/img/github-fill.png">
+            <img src="assets/img/github.png">
         </a>
         <a _ngcontent-gqa-c30 target="_blank" href="https://www.xing.com/profile/Valentina_Kuxhausen/cv">
-            <img href="/" src="assets/img/xing-fill.png">
+            <img src="assets/img/xing.png">
         </a>
     </div>
 
 
-    <div>
+    <!-- DATA-WRAP -->
+    <div class="data-wrap">
         <a routerLink="/data-protection">Data Protection</a>
         <a routerLink="/imprint">Imprint</a>
     </div>
 
-    <div>
-        <p>© Valentina Kuxhausen</p>
+
+    <!-- COPY-WRAP -->
+    <div class="copy-wrap">
+        <p>&copy; 2022 Valentina Kuxhausen</p>
     </div>
+
 
 </footer>
