--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,10 @@
-<header [class.headerDark]="darkMode">
+<header class="bgr-dark fixed-nav">
 
-    <!-- <img *ngIf="!darkMode" routerLink="/" src="white" alt="">
-    <img *ngIf="darkMode" routerLink="/" src="black" alt=""> -->
-
-    <div [class.darkLinks]="darkMode">
-        <a routerLink="/">Home</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+    <div>
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
     </div>
 
 </header>
