--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,17 +1,24 @@
-<div class="bgr-dark">
-<h1 class="center">My Projects</h1>
+<div id="projects" class="bgr-dark">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="center">PROJECTS</h1>
 
-<div class="column">
 
-    <div>
-        <img class="project-img elpolloloco" src="assets/img/1.jpg" alt="">
-        <img class="project-img pokedex" src="assets/img/2.jpg" alt="">
+    <!-- NGFOR PROJECTS -->
+    <div class="column">
+        <div>
+            <img class="project-img" src="assets/img/el_pollo_loco.png" alt="">
+        </div>
+        <div>
+            <img class="project-img" src="assets/img/join.png" alt="">
+        </div>
+        <div>
+            <img class="project-img" src="assets/img/ring_of_fire.png" alt="">
+        </div>
     </div>
 
-    <div>
-        <img class="project-img ringoffire" src="assets/img/3.jpg" alt="">
-        <img class="project-img join" src="assets/img/4.jpg" alt="">
-    </div>
 
-</div>
 </div>
