--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<app-menu [darkMode]="router.url !== '/'"></app-menu>
-
-<!-- <div [class.container]="router.url !== '/'"> -->
+<app-menu [darkMode]="router.url == '/'"></app-menu>
 
 <router-outlet></router-outlet>
 
-    <app-skills class="bgr-bright"></app-skills>
-    <app-projects class="bgr-dark"></app-projects>
-    <app-contact class="bgr-bright"></app-contact>
+    <app-home></app-home>
+    <app-about></app-about>
+    <app-projects></app-projects>
+    <app-contact></app-contact>
 
-<app-footer class="bgr-dark"></app-footer>
+<app-footer></app-footer>
