--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,15 +1,24 @@
+span {
+    color: #a03ce2;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 .contact-fields {
-    background-color: rgb(125, 120, 144);
+    background-color: #3f5368;
     margin: 12px;
     padding: 16px;
-    border: none;
-
+    border-radius: 4px 4px 0 0;
 }
 
 .input {
     width: 500px;
     border: none;
     color: white;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .textarea {
@@ -17,9 +26,22 @@
     height: 200px;
     border: none;
     color: white;
-   
+
+    &:focus {
+        outline: none;
+    }
+
 }
 
 ::placeholder {
     color: white;
 }
+
+.button {
+    background-color: #a03ce2;
+    padding: 8px;
+    border: none;
+    color: white;
+    border-radius: 2px;
+}
+
