--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,3 +1,4 @@
+<div class="bgr-bright">
 <h1>Impressum</h1>
 <p>Angaben gemäß § 5 TMG</p>
 <p>Valentina Kuxhausen <br>
@@ -14,3 +15,4 @@
 <p><strong>Kontakt:</strong> <br>
     Telefon: 0049-17658863084<br>
     E-Mail: <a href='mailto:valentina.kuxhausen@web.de'>valentina.kuxhausen@web.de</a></p>
+</div>
