--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,23 +1,25 @@
 header {
+    display: flex;
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
-    height: 50px;
     z-index: 1;
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-right: 200px;
-    padding-left: 200px;
+    justify-content: center;
+    border-bottom: 0.2rem solid #04c2c9;
+    background-color: #112233;
     
     a {
         text-decoration: none;
+        font-size: large;
         color: white;
-        margin-left: 20px;
+        margin-left: 50px;
+        margin-right: 50px;
 
         &:hover {
-            opacity: 0.85;
+            color: #a03ce2;
+            text-shadow: 0 0 6px  #a03ce2;
         }
     }
 
@@ -38,4 +40,11 @@ header {
 .headerDark {
     background-color: white;
     box-shadow: 0 1px 3px 0 black(0,0,0,0.2);
+}
+
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    height: 50px;
 }
