--- a/src/app/projects/helpersgit.html
+++ b/src/app/projects/helpersgit.html
@@ -1,5 +1,8 @@
 <div #portfolioGrid>
     <mat-grid-list  [cols]="arrangeGrid()" rowHeight="4:3" [style.opacity]="animationState['portfolio'] == 'out' ? '0' : '1'"  [@slideInUpwardsChild]="animationState['portfolio']">
+
+
+        <!-- NGFOR -->
         <mat-grid-tile *ngFor="let project of visibleProjects">
             <img src="{{'./assets/img/projects/'+ project.img }}" >
             <div class="project-wrap">
