--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,3 @@
-<!-- GESAMTE WHO-WRAP -->
 <div id="about" class="bgr-bright height-vh">
     <br>
     <br>
@@ -6,23 +5,27 @@
     <br>
     <br>
     <h1 class="center">ABOUT</h1>
-    <div class="who-wrap">
+    <br>
+    <br>
+    <br>
+    <!-- GESAMTE ABOUT-WRAP -->
+    <div class="about-wrap">
         
 
         <!-- PROFILE-WRAP -->
-        <div class="profile-wrap slideshow-container">
+        <div class="profile-wrap">
             <img src="assets/img/kreis.png">
             <h2>Who I am</h2>
             <p>
-                I'm an enthusiastic <strong>guitarist and drumer</strong> and a <strong>Front-End Developer</strong>
-                who loves pushing boundaries.
+                I'm an enthusiastic <strong>guitarist and drumer</strong>
+                and a <strong>Front-End Developer</strong> who loves pushing boundaries.      
             </p>
         </div>
 
 
         <!-- SKILLS-WRAP -->
         <div class="skills-wrap">
-            <p>kakska</p>
+            <span *ngFor="let i"></span>
         </div>
 
 
