--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -42,9 +42,7 @@ footer {
         text-align: center;
 
         &:hover {
-            color: #a03ce2;
-            text-shadow: 0 0 6px  #a03ce2;
-
+            color: gray;
         }
     }
 }
