--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <router-outlet></router-outlet>
 
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
     <app-about></app-about>
     <app-projects></app-projects>
     <app-contact></app-contact>
