router to imprint

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,5 @@
-<div id="about" class="bgr-bright height-vh">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="center">ABOUT</h1>
-    <br>
-    <br>
-    <br>
+<div id="about" class="bgr-bright height-vh padding padding-top-bottom">
+    <h1 class="center bottom">ABOUT</h1>
     <!-- GESAMTE ABOUT-WRAP -->
     <div class="about-wrap">
         
@@ -25,7 +17,7 @@
 
         <!-- SKILLS-WRAP -->
         <div class="skills-wrap">
-            <span *ngFor="let i"></span>
+            <span>here will be several skills in progress bars untereinander</span>
         </div>
 
 
