--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,4 @@
-<div id="contact" class="bgr-bright">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+<div id="contact" class="bgr-bright padding padding-top-bottom">
     <h1 class="center">CONTACT</h1>
     <span class="center">Get in touch to work together?</span>
     <div class="column">
@@ -12,9 +7,6 @@
         <input class="input contact-fields" type="text" placeholder="Your email">
         <textarea class="textarea contact-fields" placeholder="Your message"></textarea>
         <button class="button margin-bottom">Submit</button>
-        <br>
-        <br>
-        <br>
 
     </div>
 </div>
