--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 
 
     <!-- SOCIAL-WRAP -->
-    <div class="bgr-dark social-wrap">
+    <div class="bgr-dark social-wrap padding">
         <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
             <img src="assets/img/linkedin.png">
         </a>
