--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,4 +1,4 @@
-<div class="bgr-bright">
+<div class="bgr-bright padding padding-top-bottom">
 <h1>Impressum</h1>
 <p>Angaben gemäß § 5 TMG</p>
 <p>Valentina Kuxhausen <br>
