--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -9,7 +9,6 @@
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    width: 50vw;
 } 
 
 .profile-wrap {
@@ -24,6 +23,7 @@
         height: 16rem;
         border-radius: 50%;
         object-fit: contain;
+        cursor:default;
     }
     h2 {
         font-size: 1.8rem;
