--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<app-menu [darkMode]="router.url == '/'"></app-menu>
+<app-menu></app-menu>
 
-<router-outlet></router-outlet>
 
+ 
+<router-outlet>
     <!-- <app-home></app-home> -->
     <app-about></app-about>
     <app-projects></app-projects>
     <app-contact></app-contact>
+</router-outlet>
+
+    
 
 <app-footer></app-footer>
