--- a/src/app/data-protection/data-protection.component.html
+++ b/src/app/data-protection/data-protection.component.html
@@ -1,4 +1,4 @@
-<div class="bgr-bright">
+<div class="bgr-bright padding padding-top-bottom">
 <h1>Datenschutzerklärung</h1>
 <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
 <p>Valentina Kuxhausen</p>
