--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<header class="bgr-dark fixed-nav">
+<header class="bgr-dark fixed-nav padding">
 
     <div>
         <!-- <a href="#home">HOME</a> -->
