--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,7 +11,7 @@
             <span class="project-name"> {{ project.name }}</span>
             <span> {{ project.description }}</span>
             <a target="_blank" href="{{ project.link }}">Try it online</a>
-            <a target="_blank" href="http://valentina-kuxhausen.developerakademie.net/m10_gruppenarbeit_join_ftp/gruppenarbeit-174/addtask.html">Test</a>
+            <!-- ng-href="{{ project.link }}" -->
     </div>
 
 
