--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,8 @@
 
  
 <router-outlet>
-    <!-- <app-home></app-home> -->
-    <app-about></app-about>
-    <app-projects></app-projects>
-    <app-contact></app-contact>
+    <app-home></app-home>
+
 </router-outlet>
 
     
