--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
-<!-- <div id="home" class="bgr-dark height-vh padding">
+<div id="home" class="bgr-dark height-vh padding">
+
 
 
 
     
-</div> -->
+</div>
+
+
+    <app-about></app-about>
+    <app-projects></app-projects>
+    <app-contact></app-contact>
