footer links do work

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,7 @@
 
     <!-- DATA-WRAP -->
     <div class="data-wrap">
-        <a routerLink="/data-protection">Data Protection</a>
+        <a href="#data-protection" routerLink="/data-protection">Data Protection</a>
         <a routerLink="/imprint">Imprint</a>
     </div>
 
