working on project-section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
-<div id="home" class="bgr-dark height-vh padding">
+<!-- <div id="home" class="bgr-dark height-vh padding">
 
 
 
 
     
-</div>
+</div> -->
 
 
     <app-about></app-about>
