--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,12 +1,39 @@
-.project-img {
-    width: 300px;
-    height: 200px;
-    cursor: pointer;
-    padding: 5px;
-
+.project-wrap {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    padding: 48px;
+    opacity: 0.8;
+    width: 900px;
+    
     &:hover {
-        opacity: 0.5;
+        opacity: 1;
+
     }
+}
+
+.img-wrap {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+
+    img {
+        width: 300px;
+        height: 200px;
+        cursor: pointer;    
+    }
+}
+
+.info-wrap {
+    width: 50%;
+    border-radius: 5%;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .font-türkis {
