--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
             <img src="assets/img/kreis.png">
             <h2>Who I am</h2>
             <p>
-                I'm an enthusiastic <strong>guitarist and drumer</strong>
+                I'm an enthusiastic <strong>guitarist, drumer</strong>
                 and a <strong>Front-End Developer</strong> who loves pushing boundaries.      
             </p>
         </div>
