--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div id="contact" class="bgr-bright padding padding-top-bottom">
     <h1 class="center">CONTACT</h1>
     <span class="center">Get in touch to work together?</span>
-    <div class="column">
+    <div class="column-contact">
 
         <input class="input contact-fields" type="text" placeholder="Your name">
         <input class="input contact-fields" type="text" placeholder="Your email">
