--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,9 @@
+.column-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 span {
     color: #a03ce2;
     margin-top: 50px;
