--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,19 +6,28 @@
         <span class="font-türkis">Please check out my projects. Select a project to try it online.</span>
         <!-- NGFOR PROJECTS -->
         <!-- PROJECT-WRAP -->
-        <div class="project-wrap" *ngFor="let project of projects">
-            <!-- IMG WRAP -->
-            <div class="img-wrap">
-                <img class="project-img" src="{{ project.image }}">
+        <div class="column" *ngFor="let project of projects">
+
+
+            <div class="project-wrap">
+                <!-- IMG WRAP -->
+                <div class="img-wrap">
+                    <img class="project-img" src="{{ project.image }}">
+                </div>
+                <!-- INFO-WRAP -->
+                <div class="info-wrap">
+                    <span class="project-name"> {{ project.name }}</span>
+                    <span class="project-desc"> {{ project.description }}</span>
+                    <span class="project-tech">{{ project.technology }}</span>
+                    <a class="project-link" target="_blank" href="{{ project.link }}">Try it online</a>
+                </div>
             </div>
-            <!-- INFO-WRAP -->
-            <div class="info-wrap">
-                <span class="project-name"> {{ project.name }}</span>
-                <span class="project-desc"> {{ project.description }}</span>
-                <span class="project-tech">{{ project.technology }}</span>
-                <a class="project-link" target="_blank" href="{{ project.link }}">Try it online</a>
+
+            <div class="separate-project">
             </div>
+
         </div>
+
 
 
 </div>
