--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -3,9 +3,11 @@
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    padding: 48px;
+    padding-top: 48px;
     opacity: 0.8;
-    width: 900px;
+    width: 1500px;
+    border-bottom: #04c2c9;
+
     
     &:hover {
         opacity: 1;
@@ -20,25 +22,50 @@
     align-items: center;
 
     img {
-        width: 300px;
-        height: 200px;
+        width: 390px;
         cursor: pointer;    
     }
 }
 
 .info-wrap {
-    width: 50%;
+    width: 60%;
     border-radius: 5%;
     padding-right: 2rem;
-    padding-left: 2rem;
+    padding-left: 40px;
     font-size: 1rem;
     display: flex;
     flex-direction: column;
+
+    a {
+        color: #04c2c9;
+        text-decoration: none;
+        
+        &:hover {
+            text-shadow: 0 0 4px  #04c2c9;
+        }
+    }
+}
+
+.project-name {
+    font-size: 32px;
+    padding-bottom: 12px;
+}
+
+.separate-project {
+    background-color: #32465a ;
+    height: 4px;
+    display: flex;
+    position: absolute;
+    left: 369px;
+    right: 0;
+
 }
 
 .font-türkis {
     color: #04c2c9;
     margin-top: 50px;
     margin-bottom: 50px;
-
+    display: flex;
+    justify-content: center;
+    
 }
