--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,7 +45,7 @@ h1 {
 .column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
 }
 
 img:hover {
