--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -7,7 +7,7 @@ header {
     z-index: 1;
     align-items: center;
     justify-content: center;
-    border-bottom: 0.2rem solid #04c2c9;
+    border-bottom: 3.5px solid #04c2c9;
     background-color: #112233;
     
     a {
