--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -23,22 +23,22 @@
 
     img {
         width: 390px;
-        cursor: pointer;    
     }
 }
 
 .info-wrap {
     width: 60%;
     border-radius: 5%;
-    padding-right: 2rem;
+    padding-right: 32px;
     padding-left: 40px;
-    font-size: 1rem;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
 
     a {
         color: #04c2c9;
         text-decoration: none;
+        padding-top: 12px;
         
         &:hover {
             text-shadow: 0 0 4px  #04c2c9;
