--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
     <span class="center">Get in touch to work together?</span>
 
 
-    <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+    <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" action="http://w01cc74e.kasserver.com/valentinakuxhausen.com/send_mail.php" method="post">
         <div class="column-contact">
 
 
