--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -19,7 +19,7 @@
                     <span class="project-name"> {{ project.name }}</span>
                     <span class="project-desc"> {{ project.description }}</span>
                     <span class="project-tech">{{ project.technology }}</span>
-                    <a class="project-link" target="_blank" href="{{ project.link }}">Try it online</a>
+                    <a target="_blank" href="{{ project.link }}">Try it online</a>
                 </div>
             </div>
 
