--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,18 +8,19 @@
             <img src="assets/img/kreis.png">
             <h2>Who I am</h2>
             <p>
-                I'm an enthusiastic <strong>guitarist, drumer</strong>
+                I'm an enthusiastic <strong>guitarist</strong>
                 and a <strong>Front-End Developer</strong> who loves pushing boundaries.
             </p>
         </div>
 
         <!-- SKILLS-WRAP -->
         <div class="skills-wrap">
-            <h1 (click)="event=!event">
+            <!-- <h1 (click)="event=!event">
                 click to see my skills
-            </h1>
-            <div @fadeIn *ngIf="event" class="skill-bar">
-                <div *ngFor="let i of skills">{{ i }}</div>
+            </h1> -->
+            <!-- *ngIf="event" -->
+            <div class="skill-bar">
+                <div @fadeIn *ngFor="let i of skills">{{ i }}</div>
             </div>
         </div>
 
