--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,9 +3,7 @@
     <span class="center">Get in touch to work together?</span>
 
 
-    <form 
-    (ngSubmit)="onSubmit()" 
-    #contactForm>
+    <form action="https://valentina-kuxhausen.developerakademie.net/valentinakuxhausen/send_mail/send_mail.php" method="POST" class="form">
         <div class="column-contact">
 
 
