--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,18 +1,14 @@
 <div class="bgr-bright padding padding-top-bottom">
-<h1>Impressum</h1>
-<p>Angaben gemäß § 5 TMG</p>
-<p>Valentina Kuxhausen <br>
-    Am Ziegenberg 93<br>
-    34128 Kassel <br>
-</p>
+    <h1>Impressum</h1>
+    <p>Angaben gemäß § 5 TMG</p>
+    <p>Valentina Kuxhausen <br>
+        Am Ziegenberg 93<br>
+        34128 Kassel <br></p>
 
+    <p> <strong>Vertreten durch: </strong><br>
+        Valentina Kuxhausen<br></p>
 
-<p> <strong>Vertreten durch: </strong><br>
-    Valentina Kuxhausen<br>
-</p>
-
-
-<p><strong>Kontakt:</strong> <br>
-    Telefon: 0049-17658863084<br>
-    E-Mail: <a href='mailto:valentina.kuxhausen@web.de'>valentina.kuxhausen@web.de</a></p>
+    <p><strong>Kontakt:</strong> <br>
+        Telefon: 0049-17658863084<br>
+        E-Mail: <a href='mailto:valentina.kuxhausen@web.de'>valentina.kuxhausen@web.de</a></p>
 </div>
