--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,5 +8,6 @@
 
 
     <app-about></app-about>
+    <app-my-skills></app-my-skills>
     <app-projects></app-projects>
     <app-contact></app-contact>
