--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,28 +1,33 @@
-<div id="about" class="bgr-bright height-vh padding padding-top-bottom">
-    <h1 class="center bottom">ABOUT</h1>
-    <!-- GESAMTE ABOUT-WRAP -->
-    <div class="about-wrap">
-
-        <!-- PROFILE-WRAP -->
-        <div class="profile-wrap">
-            <img src="assets/img/kreis.png">
-            <h2>Who I am</h2>
-            <p>
-                I'm an enthusiastic <strong>guitarist</strong>
-                and a <strong>Front-End Developer</strong> who loves pushing boundaries.
-            </p>
-        </div>
-
-        <!-- SKILLS-WRAP -->
-        <div class="skills-wrap">
-            <!-- <h1 (click)="event=!event">
-                click to see my skills
-            </h1> -->
-            <!-- *ngIf="event" -->
-            <div class="skill-bar">
-                <div @fadeIn *ngFor="let i of skills">{{ i }}</div>
+<div class="welcome-section">
+    <div class="welcome_section_top">
+        <div class="welcome_section_top_left">
+            <div class="welcome_text_div">
+                <div class="left_to_right welcome_text">
+                    <b>Hi,<br>
+                        I´m <span class="name">Valentina</span> Kuxhausen <br>
+                        Guitarist and<br>
+                        Front End Develop<span class="e">e</span>r</b>
+                </div>
+            </div>
+            <div class="contact_btn_div">
+                <a href="#contact"> <button class="button_blue transition"><b>Contact Me</b></button>
+                </a>
             </div>
         </div>
-
+        <div class="welcome_section_top_right">
+            <img class="right_to_left main_picture" src="assets/img/kreis.png">
+        </div>
     </div>
+
+    <div class="welcome_section_bottom">
+        <a href="#my_skills">
+            <div class="magnetic_container">
+                <div class="magnetic_element">
+                    <img class="" src="assets/img/arrow.png">
+                </div>
+                <div class="magnetic_background"></div>
+            </div>
+        </a>
+    </div>
+
 </div>
