--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,65 +1,387 @@
-.about-wrap {
+// .about-wrap {
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: row;
+//     align-items: center;
+// } 
+
+// .profile-wrap {
+//     width: 50%;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+
+
+//     img {
+//         width: 250px;
+//         height: 250px;
+//         border-radius: 50%;
+//         object-fit: contain;
+//         cursor:default;
+//     }
+//     h2 {
+//         font-size: 24px;
+//     }
+//     p {
+//         text-align: center;
+//         width: 70%;
+//         font-size: 20px;
+//         line-height: 24px;
+//     }
+
+//     strong {
+//         color: #a03ce2;
+//     }
+
+// }
+
+// .left_to_right {
+//     position: relative;
+//     animation: slide_left 855ms ease-in-out;
+//     overflow: hidden;
+// }
+
+// .skills-wrap {
+//     width: 50%;
+//     border-radius: 5%;
+//     padding-left: 32px;
+//     font-size: 16px;
+// }
+
+// // ANIMATION
+
+// .skill-fly {
+//     animation: skill-fly-animation 1.5s ease-in-out;
+//     transform: scale(1) translateX(280px);
+//  }
+
+// @keyframes skill-fly-animation {
+//     0% {
+//         transform: scale(1);
+//     }
+//     33% {
+//         transform: scale(1.33);
+//     }
+//     66% {
+//         transform: scale(1.66);
+//     }
+//     100% {
+//         transform: scale(1) translateX(280px);
+//     }
+// }
+
+$size: 10rem;
+
+.welcome-section {
+    height: calc(100vh - 95px);
+    color: white;
+    background-color: #32465a;
+    padding-top: 95px;
+}
+
+.welcome_section_top {
+    height: 70%;
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    align-items: center;
-} 
+}
 
-.profile-wrap {
-    width: 50%;
+.welcome_section_top_left {
+    .name {
+        color: var(--main-color);
+    }
+
+    .e {
+        color: #04c2c9;
+    }
+}
+
+.magnetic_container {
+    display: none;
+}
+
+.welcome_text_div {
+    // padding-left: 210px;
+    height: 60%;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    overflow: hidden;
+}
 
+.welcome_text {
+    font-size: 58px;
+}
 
-    img {
+.contact_btn_div {
+    // padding-left: 210px;
+    display: flex;
+    align-items: center;
+}
+
+.button_blue {
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 18px;
+    border-color: #04c2c9;
+    border: 2px solid;
+    color: #04c2c9;
+    padding: 24px;
+    padding-left: 88px;
+    padding-right: 88px;
+
+    &:hover {
+        background-color: #04c2c9;    
+        color: white;
+        border-color: #04c2c9;   
+        box-shadow: 0px $size * 0.3 $size 0px rgba(#04c2c9, 0.4);
+    }
+}
+
+.welcome_section_top_right {
+    // padding-right: 210px;
+    // padding-left: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: inherit;
+    padding-left: 90px;
+}
+
+.main_picture {
+    width: 450px;
+    height: 450px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: top;
+    filter: grayscale(0.2);
+}
+
+.welcome_section_bottom {
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+@media (max-width: 1500px) {
+    .welcome_text {
+        font-size: 44px;
+    }
+
+    .main_picture {
+        width: 370px;
+        height: 370px;
+    }
+
+}
+
+@media (min-width: 1200px) {
+    .magnetic_container {
+        cursor: pointer;
+        background-color: transparent;
+        position: relative;
+        padding: $size * 1.40;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .magnetic_element {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+            width: $size * 0.50;
+            height: $size * 0.50;
+            pointer-events: none;
+        }
+
+        .magnetic_background {
+            background-color: transparent;
+            width: $size * 0.50;
+            height: $size * 0.50;
+            position: absolute;
+            z-index: 1;
+            border: 1px solid var(--secondary-color);
+            border-radius: 50%;
+            pointer-events: none;
+            box-shadow: 0px $size * 0.2 $size 0px rgba(var(--secondary-color-rgb), 0.95);
+        }
+    }
+}
+
+@media (max-width: 1045px) {
+    .welcome_text {
+        font-size: 44px;
+    }
+
+    .main_picture {
         width: 250px;
         height: 250px;
-        border-radius: 50%;
-        object-fit: contain;
-        cursor:default;
     }
-    h2 {
+
+    .button_blue {
+        padding-left: 45px;
+        padding-right: 45px;
+    }
+
+    .welcome_text {
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 850px) and (min-height: 600px) {
+    .welcome-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 850px) {
+
+    .welcome_text {
         font-size: 24px;
-    }
-    p {
         text-align: center;
-        width: 70%;
-        font-size: 20px;
-        line-height: 24px;
+        margin-bottom: 16px;
     }
 
-    strong {
-        color: #a03ce2;
+    .welcome_section_top {
+        flex-direction: column-reverse;
+        align-items: center;
+        height: 67%;
+    }
+
+    .contact_btn_div {
+        padding-left: 0px;
+        justify-content: center;
+    }
+
+    .welcome_section_top_right {
+        padding-right: 0;
+        padding-left: 0;
+    }
+
+    .welcome_text_div {
+        padding-left: 0px;
+        justify-content: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+}
+
+
+@media (max-width: 1240px) and (orientation : landscape) {
+
+    .welcome_text_div {
+        padding-left: 60px;
+        font-size: 32px;
+    }
+
+    .contact_btn_div {
+        padding-left: 60px;
+    }
+
+    .welcome_section_top {
+        flex-direction: unset;
+
+    }
+
+    .welcome_section_top_right {
+        padding-right: 60px;
+    }
+
+    .welcome_text_div {
+        padding-top: unset;
+        padding-bottom: 4px;
+    }
+
+    .arrow {
+        padding-top: 12px;
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media (max-width: 480px) and (max-height: 480px) {
+    .main_picture {
+        width: 110px;
+        height: 110px;
     }
 
 }
 
-.skills-wrap {
-    width: 50%;
-    border-radius: 5%;
-    padding-left: 32px;
-    font-size: 16px;
+@media (max-width: 480px) and (min-height: 1000px) {
+
+    .main_picture {
+        width: 200px;
+        height: 200px;
+    }
 }
 
-// ANIMATION
+@media (max-width: 320px) {
 
-.skill-fly {
-    animation: skill-fly-animation 1.5s ease-in-out;
-    transform: scale(1) translateX(280px);
- }
+    .main_picture {
+        margin-top: 42px;
+    }
+}
 
-@keyframes skill-fly-animation {
-    0% {
-        transform: scale(1);
+@media (max-width: 480px) and (orientation : landscape) {
+    .welcome_section_top {
+        height: unset;
     }
-    33% {
-        transform: scale(1.33);
+
+    .welcome_text {
+        font-size: 18px;
     }
-    66% {
-        transform: scale(1.66);
+
+    .main_picture {
+        width: 140px;
+        height: 140px;
     }
-    100% {
-        transform: scale(1) translateX(280px);
+
+    .button_blue {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .magnetic_container {
+        display: none;
+    }
+
+}
+
+.left_to_right {
+    position: relative;
+    animation: slide_left 855ms ease-in-out;
+    overflow: hidden;
+
+}
+
+.right_to_left {
+    position: relative;
+    animation: slide_right 855ms ease-in-out;
+}
+
+@keyframes slide_left {
+    from {
+        transform: translateX(-200px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes slide_right {
+    from {
+        transform: translateX(200px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateX(0px);
+        opacity: 1;
     }
 }
