--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
 
     <div>
         <!-- <a href="#home">HOME</a> -->
-        <a href="#about">ABOUT</a>
+        <a href="#my-skills">MY SKILLS</a>
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </div>
